# ROADtools

./: .gitignore  LICENSE  README.md  azure-pipelines.yml  setup.py
roadlib/: pyproject.toml  setup.py
roadlib/roadtools/roadlib/: asyncauth.py  asyncdeviceauth.py  auth.py  constants.py  dbgen.py  dbgen_msgraph.py  deviceauth.py  metagen.py  metagen_msgraph.py  msgraph_dbgen.py  wstrust.py
roadlib/roadtools/roadlib/metadef/: basetypes.py  complextypes.py  complextypes_msgraph.py  database.py  database_msgraph.py  entitytypes.py  entitytypes_msgraph.py  msgraph_database.py  msgraph_entitytypes.py
roadrecon/: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
roadrecon/frontend/: angular.json  package-lock.json  package.json
roadrecon/frontend-ng/: CHANGELOG.md  Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.docker.js  vite.config.js
roadrecon/frontend-ng/src/: App.vue  main.js  router.js
roadrecon/frontend-ng/src/css/: style.css
roadrecon/frontend-ng/src/pages/: AdministrativeUnits.vue  ApplicationRoles.vue  Applications.vue  Dashboard.vue  Devices.vue  DirectoryRoles.vue  Groups.vue  OAuth2Permissions.vue  Policies.vue  RowDetail.vue  ServicePrincipals.vue  Users.vue
roadrecon/frontend-ng/src/partials/: Banner.vue  Header.vue  Sidebar.vue  SidebarLinkGroup.vue
roadrecon/frontend-ng/src/plugins/: axios.ts
roadrecon/frontend-ng/src/presets/: Noir.js
roadrecon/frontend-ng/src/services/: toast.js
roadrecon/frontend-ng/src/utils/: Utils.js
roadrecon/frontend/e2e/src/: app.e2e-spec.ts
roadrecon/frontend/src/: index.html  material_theme.scss
roadrecon/frontend/src/environments/: environment.prod.ts  environment.ts
roadrecon/msgraph_frontend/: README.md  karma.conf.js
roadrecon/msgraph_frontend/src/: material_theme.scss
roadrecon/msgraph_frontend/src/app/: app.component.html  app.component.ts  app.module.ts
roadrecon/msgraph_frontend/src/environments/: environment.prod.ts
roadrecon/roadtools/roadrecon/: .gitignore  enumerate.py  gather.py  main.py  msgraph_gather.py  msgraph_server.py  server.py  ua.txt
roadrecon/roadtools/roadrecon/plugins/: bloodhound.py  caopticsimport.py  export.py  (+5 more)
(+122 files in other folders)
