[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "roadtools"
version = "0.27.0"
description = "ROADtools common components library"
license = {text = "MIT"}
classifiers = [
    'Intended Audience :: Information Technology',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
authors = [
    {name = "Dirk-jan Mollema", email = "dirkjan@dirkjanm.io"},
]
dependencies = [
    "adal",
    "sqlalchemy",
    "pyjwt",
]

[project.urls]
Repository = "https://github.com/dirkjanm/ROADtools/"

[tool.setuptools.packages.find]
include = ["roadtools.*"]